--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <h2>About Me</h2>
     <p>
       I am <strong>Kashaf Hafeez</strong>, a dedicated <strong>full-stack web developer & designer</strong> with a passion for creating modern, responsive, and visually appealing websites and applications.  
-      I have strong expertise in <strong>HTML, CSS, JavaScript</strong>, as well as backend technologies including <strong>Node.js, Express, and databases</strong>, allowing me to build complete full-stack solutions.  
+      I have strong expertise in <strong>HTML, CSS, JavaScript</strong>, as well as backend technologies including <strong> php, sql, and databases</strong>, allowing me to build complete full-stack solutions.  
       Currently, I am pursuing my <strong>Bachelor's degree at Virtual University</strong> and also enhancing my technical skills through a <strong>Diploma in Web Development at Aptech</strong>.  
       I focus on combining clean code, elegant design, and smooth user experiences to craft projects that are both functional and visually striking.  
       I continuously learn new tools and frameworks to stay up-to-date with the latest trends in web development and design.
@@ -53,7 +53,7 @@
     <h2>My Skills</h2>
     <p>
       I have strong expertise in front-end technologies like <strong>HTML, CSS, JavaScript, Bootstrap</strong>, 
-      and I am also proficient in backend development with <strong>Node.js, Express, and databases</strong>.  
+      and I am also proficient in backend development with <strong>php,mysql, and databases</strong>.  
       My skill set allows me to build complete, responsive, and dynamic web applications while keeping design and usability in focus.
     </p>
     <div class="skills-list">
@@ -61,9 +61,12 @@
       <span>CSS</span>
       <span>JavaScript</span>
       <span>Bootstrap</span>
-      <span>Node.js</span>
-      <span>Express.js</span>
-      <span>MongoDB</span>
+      <span>C++</span>
+      <span>Php</span>
+       <span>UI/UX</span>
+      <span>Mysql</span>
+        <span>Wordpress</span>
+       <span>Larawell</span>
       <span>Git & GitHub</span>
     </div>
   </div>
@@ -76,7 +79,7 @@
     <!-- Row 1 -->
     <div class="projects-row">
       <div class="project-card">
-        <img src="hlo1.png" alt="Portfolio Website">
+     <a href="https://connectnisa.com/game_website">  <img src="hlo1.png" alt="Portfolio Website"></a> 
         <h3>Gaming Website</h3>
         <p>A personal PLAYVERSE gaming website built using HTML, CSS,php,sql and JavaScript .</p>
       </div>
@@ -169,3 +172,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
